spec/e2e/function/missing_arguments.lit
fn f { |a, b| }

f(1); # error: [line 3] Runtime error: Expected 2 arguments but got 1.
